--- a/cryptogateway-root/cryptogateway-services/src/main/resources/application.yml
+++ b/cryptogateway-root/cryptogateway-services/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
   profiles: producction
   datasource:
    type: com.zaxxer.hikari.HikariDataSource
-   url: jdbc:mysql://localhost/crypto_gateway?useSSL=false
+   url: jdbc:mysql://localhost/crypto_gateway?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
    username: root
    password: root
    hikari:
