--- a/cryptogateway-root/cryptogateway-core/build.gradle
+++ b/cryptogateway-root/cryptogateway-core/build.gradle
@@ -6,6 +6,7 @@ dependencies {
 	compile project(":cryptogateway-client")
 	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
 	compile group: 'org.hibernate', name: 'hibernate-entitymanager', version:'5.4.4.Final'
+	compile group: 'org.springframework', name: 'spring-web', version: '5.2.0.RELEASE'	
 	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.8.RELEASE'
 	compile group: 'com.querydsl', name: 'querydsl-jpa', version: '4.2.1'
 	compile group: 'org.springframework', name: 'spring-context', version: '5.2.0.RELEASE'
