--- a/cryptogateway-root/cryptogateway-core/build.gradle
+++ b/cryptogateway-root/cryptogateway-core/build.gradle
@@ -11,5 +11,6 @@ dependencies {
 	compile group: 'com.querydsl', name: 'querydsl-jpa', version: '4.2.1'
 	compile group: 'org.springframework', name: 'spring-context', version: '5.2.0.RELEASE'
 	compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.10.0.pr2'
+	compile group: 'org.web3j', name: 'core', version: '4.5.5'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
