--- a/cryptogateway-root/cryptogateway-client/build.gradle
+++ b/cryptogateway-root/cryptogateway-client/build.gradle
@@ -2,12 +2,56 @@ plugins {
     id 'java'
 }
 
+
+sourceSets.main.java.srcDirs += "src/querydsl/java"
+sourceSets {
+  main.java
+  querydsl {
+    java.srcDirs = ["src/querydsl/java/"]
+  }
+}
+
+task packageSourcesQuerydsl(type: Jar) {
+  classifier = 'sources'
+  from sourceSets.main.allSource + sourceSets.querydsl.allSource
+}
+  
+artifacts.archives packageSourcesQuerydsl
+
+configurations {
+    querydslapt
+}
+
+dependencies {
+    querydslapt "com.querydsl:querydsl-apt:4.2.1"
+}
+
+task querydsl(type: JavaCompile, group: 'build', description: 'Generate the QueryDSL query types') {
+    source = sourceSets.main.java
+    classpath = configurations.compile + configurations.compileOnly + configurations.querydslapt
+    options.compilerArgs = [
+	    '-proc:only',
+		'-processor', 'com.querydsl.apt.jpa.JPAAnnotationProcessor,com.querydsl.apt.QuerydslAnnotationProcessor'
+    ]
+    destinationDir = sourceSets.querydsl.java.srcDirs.iterator().next()
+    outputs.dir destinationDir
+}
+
+compileJava.source querydsl.outputs.files
+
+clean {
+    delete sourceSets.querydsl.java.srcDirs
+}
+
 dependencies {
 	compile project(":cryptogateway-vo")
-	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
-   	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.2.0.RELEASE'
-	compile group: 'com.querydsl', name: 'querydsl-jpa', version: '4.2.1'
-    compile group: 'javax.persistence', name: 'javax.persistence-api', version:'2.2'
-    compile group: 'org.springframework.data', name: 'spring-data-commons', version: '2.1.3.RELEASE'    
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+	compile("com.querydsl:querydsl-core")
+    compile("javax.persistence:javax.persistence-api")
+    compile 'org.springframework.data:spring-data-commons'
+    compile 'org.springframework:spring-webflux'
+	compile group: 'org.projectlombok', name: 'lombok'
+   	compile group: 'org.springframework.data', name: 'spring-data-jpa'
+	compile group: 'com.querydsl', name: 'querydsl-jpa'
+	compile group: 'javax.annotation', name: 'javax.annotation-api'
+    testCompile group: 'junit', name: 'junit'    
 }
