--- a/cryptogateway-root/cryptogateway-core/build.gradle
+++ b/cryptogateway-root/cryptogateway-core/build.gradle
@@ -4,13 +4,10 @@ plugins {
 
 dependencies {
 	compile project(":cryptogateway-client")
-	compile group: 'org.projectlombok', name: 'lombok', version: '1.18.8'
-	compile group: 'org.hibernate', name: 'hibernate-entitymanager', version:'5.4.4.Final'
-	compile group: 'org.springframework', name: 'spring-web', version: '5.2.0.RELEASE'	
-	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.8.RELEASE'
-	compile group: 'com.querydsl', name: 'querydsl-jpa', version: '4.2.1'
-	compile group: 'org.springframework', name: 'spring-context', version: '5.2.0.RELEASE'
-	compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.10.0.pr2'
+	compile group: 'org.projectlombok', name: 'lombok'
+	compile group: 'org.hibernate', name: 'hibernate-entitymanager'
+	compile group: 'org.springframework', name: 'spring-web'
 	compile group: 'org.web3j', name: 'core', version: '4.5.5'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+	compile group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.14.7'	
+    testCompile group: 'junit', name: 'junit'
 }
