--- a/cryptogateway-root/cryptogateway-services/build.gradle
+++ b/cryptogateway-root/cryptogateway-services/build.gradle
@@ -21,9 +21,9 @@ configurations {
 }
 
 dependencies {
-	compile project(":cryptogateway-core")
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-    implementation 'org.springframework.data:spring-data-jpa'
+    compile project(":cryptogateway-core")
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     compile group: 'mysql', name: 'mysql-connector-java'
     compile group: 'com.zaxxer', name: 'HikariCP'
