--- a/cryptogateway-root/cryptogateway-core/build.gradle
+++ b/cryptogateway-root/cryptogateway-core/build.gradle
@@ -1,14 +1,11 @@
-plugins {
-    id 'java'
-}
-
 dependencies {
 	//compile project(":cryptogateway-client")
 	compile('ec.com.cryptogateway:cryptogateway-client:1.0.0-SNAPSHOT')
-	compile group: 'org.projectlombok', name: 'lombok'
+	compileOnly 'org.projectlombok:lombok'
 	compile group: 'org.hibernate', name: 'hibernate-entitymanager'
 	compile group: 'org.springframework', name: 'spring-web'
 	compile group: 'org.web3j', name: 'core', version: '4.5.5'
 	compile group: 'org.bitcoinj', name: 'bitcoinj-core', version: '0.14.7'	
+	annotationProcessor 'org.projectlombok:lombok'
     testCompile group: 'junit', name: 'junit'
 }
