Cambios realizados para

--- a/cryptogateway-root/build.gradle
+++ b/cryptogateway-root/build.gradle
@@ -33,5 +33,38 @@ subprojects {
             mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
         }
     }
+    
+    //Script para agregar los fuentes java
+	plugins.withType(JavaPlugin) {
+	     
+		task packageSources(type: Jar) {
+			classifier = 'sources'
+			from sourceSets.main.allSource
+		}
+	
+		artifacts.archives packageSources
+	}
+	
+	plugins.withType(WarPlugin) {
+	
+	    configurations.archives.artifacts.with { archives ->
+	        def jarArtifact
+	        archives.each {
+	            if (it.file =~ 'jar') {
+	                jarArtifact = it
+	            }
+	        }
+	        println "JAR to delete: ${jarArtifact}"
+	        remove(jarArtifact)
+	    }
+	
+	}
+	
+	plugins.withType(EarPlugin) {
+	     
+		ear{
+			exclude '**/*sources.jar'	
+		}
+	}
 	   
 }
