--- a/cryptogateway-root/cryptogateway-services/build.gradle
+++ b/cryptogateway-root/cryptogateway-services/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     compileOnly 'org.projectlombok:lombok'
     compile group: 'mysql', name: 'mysql-connector-java'
-    implementation "org.springframework.boot:spring-boot-starter-security"
+    //implementation "org.springframework.boot:spring-boot-starter-security"
     compile group: 'com.zaxxer', name: 'HikariCP'
     compile group: 'com.h2database', name: 'h2'
 
